# webdav-transcriber

./: .gitignore  Dockerfile  Dockerfile.lxc  Dockerfile.patch  LICENSE  README.md  UPSTREAM_BUGS.md  collators.py  ct2.py  docker-compose.yaml  easyaligner_pipelines.py  easytranscriber_pipelines.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
patches/: easyaligner_collators.py  easytranscriber_pipelines.py
src/whisperwebdav/: client.py  config.py  engine.py  formatter.py  notifier.py  server.py  transcriber.py  watcher.py  webdav.py
tests/: conftest.py  test_client.py  test_config.py  test_formatter.py  test_integration.py  test_notifier.py  test_server.py  test_watcher.py
